--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -22,5 +22,7 @@
     "Home": "ホーム",
     "Logout": "ログアウト",
     "Dashboard": "お知らせ",
-    "You are logged in!":"ログインしました！"
+    "You are logged in!":"ログインしました！",
+
+    "Password does not match":"パスワードが間違っています。"
 }
